--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
  <head><title>Testing github.io</title></head>
  <body>
-  <h1>Hello Github</h1>
+  <h1>Hello Github2</h1>
  </body>
 </html>
