--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
- <head><title>Testing github.io</title></head>
- <body>
-  <h1>Hello Github2</h1>
- </body>
+<head>
+<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+<meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">
+<title>Testing github.io</title>
+</head>
+<body>
+<h1>Hello Github2</h1>
+</body>
 </html>
