--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html>
 
   <body>
+
+
+
+<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
+
+
+
+
 <script>
   window.fbAsyncInit = function() {
     FB.init({
@@ -19,6 +32,8 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
+
+
 
 
   </body>
