added events to mario example

--- a/mario-scalm/index.html
+++ b/mario-scalm/index.html
@@ -37,21 +37,31 @@
         height: 40px;
         bottom: 0;
       }
+      .character {
+        position: absolute;
+      }
       #mario {
-        width: 100%;
-        height: 100%;
-        background-color: transparent;
+        width: 27px;
+        height: 27px;
+        background: url("resources/mario/stand/right.gif");
       }
-      .goomba {
-        width: 16px;
-        height: 16px;
-        background: url("resources/goomba/right.gif");
+      #mario.stand.left {
+        background: url("resources/mario/stand/left.gif");
       }
-      .goomba.left {
-        background: url("resources/goomba/left.gif");
+      #mario.stand.right {
+        background: url("resources/mario/stand/right.gif");
       }
-      .goomba.right {
-        background: url("resources/goomba/right.gif");
+      #mario.walk.left {
+        background: url("resources/mario/walk/left.gif");
+      }
+      #mario.walk.right {
+        background: url("resources/mario/walk/right.gif");
+      }
+      #mario.jump.left {
+        background: url("resources/mario/jump/left.gif");
+      }
+      #mario.jump.right {
+        background: url("resources/mario/jump/right.gif");
       }
       #hud {
         position: relative;
@@ -106,8 +116,8 @@
     <span id="player-lives"> 5</span>
     <div id="item-container"></div>
     <span id="player-score">  0</span>
+    <script type="text/javascript" src="./target/scala-2.12/scalajs-bundler/main/mario-fastopt-bundle.js"></script>
 </div>
-<script type="text/javascript" src="./target/scala-2.12/scalajs-bundler/main/mario-fastopt-bundle.js"></script>
 </body>
 </html>
 
