--- a/bunnymark/index.html
+++ b/bunnymark/index.html
@@ -10,7 +10,7 @@ if (!WebAssembly.instantiateStreaming) {
 }
 
 const go = new Go();
-WebAssembly.instantiateStreaming(fetch("/bunnies.wasm"), go.importObject).then(result => {
+WebAssembly.instantiateStreaming(fetch("bunnies.wasm"), go.importObject).then(result => {
     go.run(result.instance);
 });
 </script>
